# getecr

./: Cargo.toml  README.md
src/: main.rs
src/utils/: mod.rs  writer.rs
