[package]
name = "getecr"
version = "0.1.0"
authors = ["Colin MacRae <cmac4603@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ansi_term = "0.12.1"
clap = { version = "2.33.3", features = ["color"] }
rusoto_core = "0.45.0"
rusoto_ecr = "0.45.0"
tokio = "0.2.2"
